# roc_gms

./: .env  README.md  atomic_fix_homepage.py  build_files.sh  debug_output.txt  debug_output_2.txt  debug_pass_check.txt  debug_server.py  fix_calendar_tag.py  fix_calendar_tag_retry.py  fix_homepage_newlines.py  fix_line_996.patch  pyproject.toml  requirements.txt  setup_db.bat  test_calendar_logic.py  vercel.json
docs/: documentation_gracket_by_Zettersten.md
gms/: admin.py  admin_custom.py  admin_user.py  context_processors.py  forms.py  middleware.py  models.py  tests.py  urls.py  views.py
gms/migrations/: 0001_initial.py  0002_siteconfiguration_hero_images.py  0003_siteconfiguration_timezone.py  0004_alter_siteconfiguration_timezone.py  0005_siteconfiguration_admin_theme.py  0006_siteconfiguration_admin_color_scheme.py  0007_remove_siteconfiguration_admin_color_scheme_and_more.py  0008_event_logo.py  0009_competitionformat_format_type.py  0010_match_away_team_match_home_team.py  0011_auto_20251102_1216.py  0012_auto_20251102_1225.py  0013_competition_end_date_competition_frequency_day_and_more.py  0014_customday.py  0015_competition_clubs_per_group_and_more.py  0016_competition_enrolled_participants_and_more.py  0017_competition_participant_type_and_more.py  0018_customday_description_customday_updated_at_and_more.py  0019_remove_match_winner_match_away_participant_and_more.py  0020_competition_sport_type.py  0021_competition_has_third_place_match.py
gms_project/: asgi.py  dashboard.py  settings.py  urls.py  wsgi.py
templates/: base.html
(+53 files in other folders)
