[project]
name = "django-gms"
version = "0.1.0"
description = "Corporate Games Management System"
authors = [
    {name = "Rusydani",email = "rusydani.sh@gmail.com"}
]
license = {text = "n"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django (>=5.2.7,<6.0.0)",
    "psycopg2-binary (>=2.9.9,<3.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "django-solo (>=2.4.0,<3.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "django-htmx (>=1.26.0,<2.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "django-unfold (>=0.18.0)",
    "whitenoise (>=6.0.0)",
    "pytz (>=2024.1)",
]
